--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <div class="title-section">
                     <div class="text">
                         <h2 >WE FIND</h2>
-                        <img src="./photos and videos/IMG_3836.JPG" alt="photo of sky">
+                        <img src="../12350230_2160_3840_60fps.mp4" alt="photo of sky">
                     </div>
                     <div class="text" id="for_padding">
-                        <img src="./photos and videos/IMG_5225.jpeg" alt="">
+                        <img src="./2795730-uhd_2560_1440_25fps.mp4" alt="">
                         <h2>THE WAY</h2>
                         
                     </div>
