--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- Card 1 -->
             <div class="card">
                 <video class="background-video" autoplay muted loop>
-                    <source src="./12350230_2160_3840_60fps.mp4" >
+                    <source src="./IMG_2968.MP4" >
                 </video>
                 <div class="card-content">
                     <h3>Our Activities</h3>
